[package]
name = "sorahk-perf-monitor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sorahk-perf-monitor"
path = "src/main.rs"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Performance",
] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
